deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat-server-deploy
  namespace: rocketchat
  labels:
    app: rocketchat-server

spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocketchat-server
  template:
    metadata:
      labels:
        app: rocketchat-server
    spec:
      containers:
      - name: rocketchat-server
        image: smigula/rocketchat:latest
        ports:
        - containerPort: 3000
