service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketchat-service
  namespace: rocketchat
  labels:
    app: rocketchat
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: rocketchat-server
